<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="orderAddViewModel"
            type="com.listen.to.miskiatty.viewmodel.OrderAddViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ui.orders.OrderAddActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_product_add"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:title="Nuevo Pedido"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:background="@drawable/sp_rounded_bottom_rectangle"
                    android:backgroundTint="@color/colorPrimary"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/clientName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="18dp"
                        app:boxStrokeColor="@color/white"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:hint="@string/tv_client_title_orderDetails"
                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        app:errorEnabled="true">

                        <AutoCompleteTextView
                            android:id="@+id/clientNameAutoComplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:lines="1"
                            tools:ignore="LabelFor"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginHorizontal="18dp"
                        app:boxStrokeColor="@color/white"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/tv_address_title_orderDetails"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={orderAddViewModel.address}"
                            android:inputType="text"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/deliveryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/tv_date2_title_orderDetails"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_24"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDateTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> orderAddViewModel.onClickEtDateTime(etDateTime, context)}"
                            android:text="@={orderAddViewModel.deliveryDate}"
                            android:inputType="none"
                            android:focusable="false"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:hint="@string/tv_state_title_orderDetails"
                        app:startIconDrawable="@drawable/ic_baseline_gps_fixed_24"
                        app:errorEnabled="true">

                        <AutoCompleteTextView
                            android:id="@+id/clientStateAutoComplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={orderAddViewModel.state}"
                            android:inputType="none"
                            android:lines="1"
                            tools:ignore="LabelFor"/>
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_products_title"
                        android:textSize="@dimen/subtitle2_font_size" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_clients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        app:setAdapter="@{orderAddViewModel.recyclerOrdersProductsAdapter}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_baseline_add_24"
            android:text="@string/tv_next_title_orderDetails"
            android:contentDescription="@string/contentDescription_addOrder"
            android:onClick="@{() -> orderAddViewModel.onClickNextToSummary(context)}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>